# loggr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  main.cpp  uninstall.sh
include/core/: dispatcher.hpp  manager.hpp  models.hpp
include/errors/: errors.hpp
include/misc/: color.hpp  help.hpp  info.hpp
include/parser/: cli_lexer.hpp  cli_parser.hpp  token.hpp
include/utils/: utils.hpp
src/core/: dispatcher.cpp  manager.cpp
src/misc/: help.cpp  info.cpp
src/parser/: lexer.cpp  parser.cpp  token.cpp
src/utils/: utils.cpp
